@@ -1,5 +1,12 @@
 2008-12-03  Anders Carlsson  <andersca@apple.com>
 
+        Handle the CA model.
+
+        * Plugins/WebNetscapePluginView.mm:
+        (-[WebNetscapePluginView setWindowIfNecessary]):
+
+2008-12-03  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Kevin Decker.
         
         <rdar://problem/6412293>
